adjusted mobile background image size to reduce load, fixed spacing on trending cards mobile

--- a/CSS/style-mobile.css
+++ b/CSS/style-mobile.css
@@ -100,23 +100,23 @@
     .two-column-row {
         display: flex;
         flex-direction: column;
-        grid-template-columns: 1fr;
         justify-content: flex-start;
     }
     .column-image {
         width: 100%;
-        min-height:200px;
-        max-height:50vh;
+        height:100%;
     }
 
     .column-text {
         flex-direction: column;
-        width:100%;
-        margin-top:100px;
-        padding:60px 40px;
+        padding:100px 40px 60px;
     }
     body {
         max-width:100%;
         overflow-x: hidden;
+    }
+
+    .background-image-container  {
+        background-image: url('../Assets/MurrayScott_Background-Mobile.jpg'); /* Replace with your image path */
     }
 }
