--- a/CSS/style.css
+++ b/CSS/style.css
@@ -536,9 +536,8 @@ section.full-width-section {
 .trending-posts {
     padding-top: 100px;
     background: transparent;
-    min-height: 60vh;
     display: flex;
-    align-items: center;
+    align-content: flex-start;
 }
 
 .trending-heading {
@@ -548,10 +547,6 @@ section.full-width-section {
     display: flex;
     align-items: center;
     gap: 8px;
-}
-
-.flame-icon {
-    font-size: 28px;
 }
 
 .trending-grid {
@@ -567,28 +562,16 @@ section.full-width-section {
     overflow: hidden;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
+    justify-items:space-between;
 }
 
 .trending-card:hover {
     transform: translateY(-5px);
 }
 
-.rank-number {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    background: #fff;
-    color: #333;
-    font-size: 24px;
-    font-weight: bold;
-    padding: 5px 10px;
-    border-radius: 50%;
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-}
-
 .thumbnail {
     width: 100%;
-    height: 150px;
+    height: 210px;
     object-fit: cover;
 }
 
